--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
+/* This
+is
 a comment! */
 
 /* CSS Syntax:
@@ -40,7 +40,7 @@ figcaption {
 }
 
 /* ID selector (apply to one unique element per page) */
-
+/*started code-along*/
 #logo { /* select elements with id="logo" */
   background: aqua;
 }
